--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <script src="timeline.js" type="text/javascript"></script>
-    <link href:"style.css" type="text/css" rel="stylesheet"></link>
+    <link href:"style.css" type="text/css" rel="stylesheet">
     <title>Oscar Lingard</title>
   </head>
   <body>
-    <section class = "timeline">
+    <section class="timeline">
       <ul>
         <li>
           <div>
