--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script src="timeline.js" type="text/javascript"></script>
-    <link href:"style.css" type="text/css" rel="stylesheet">
+    <link href="style.css" type="text/css" rel="stylesheet">
     <title>Oscar Lingard</title>
   </head>
   <body>
