--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
       </div>
 
       <div class="ct">
-        <div class="ui labeled big button" >
-          <div class="ui icon button" data-tooltip="linkedin.com/in/oscarlingard" data-position="top left" onClick="ass1()" >
+        <div class="ui labeled big button" onClick="ass1()" >
+          <div class="ui icon button" data-tooltip="linkedin.com/in/oscarlingard" data-position="top left"  >
             <i class="linkedin icon"></i>
           </div>
           <div class="ui basic label">
@@ -227,8 +227,8 @@
           </div>
         </div>
 
-        <div class="ui labeled big button" id="lab2" >
-          <div class="ui icon button" data-tooltip="oscarlingard@gmail.com" data-position="top left" onClick="ass2()" >
+        <div class="ui labeled big button" id="lab2" onClick="ass2()" >
+          <div class="ui icon button" data-tooltip="oscarlingard@gmail.com" data-position="top left"  >
             <i class="mail icon"></i>
           </div>
           <div class="ui basic label">
