--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="manifest" href="manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="root/ms-icon-144x144.png">
+     <meta content='width=device-width; initial-scale=1.0;' name='viewport' />
     <meta name="theme-color" content="#ffffff">
     <title>Oscar Lingard</title>
   </head>
