--- a/index.html
+++ b/index.html
@@ -56,21 +56,23 @@
 
     <nav class = "navBar2">
       <div class="ui inverted top fixed menu">
-        <a href="#about_me" class="item active" onClick="switchClass2(this)">
-          About me
-        </a>
-        <a href="#experience" class="item" onClick="switchClass2(this)">
-          Experiences
-        </a>
-        <a href="#education" class="item" onClick="switchClass2(this)">
-          Education
-        </a>
-        <a href="#Achievements" class="item" onClick="switchClass2(this)">
-          Achievements
-        </a>
-        <a href="#contact_me" class="item" onClick="switchClass2(this)">
-          Contact me
-        </a>
+        <div class = "right menu">
+          <a href="#about_me" class="item active" onClick="switchClass2(this)">
+            About me
+          </a>
+          <a href="#experience" class="item" onClick="switchClass2(this)">
+            Experiences
+          </a>
+          <a href="#education" class="item" onClick="switchClass2(this)">
+            Education
+          </a>
+          <a href="#Achievements" class="item" onClick="switchClass2(this)">
+            Achievements
+          </a>
+          <a href="#contact_me" class="item" onClick="switchClass2(this)">
+            Contact me
+          </a>
+        </div>
       </div>
     </nav>
 
