--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
           <li>
             <div>
               <time>October 2016 - Present</time> <br>
-              <h3>University of Durham</h3> <br>
-              Attained 84% in the first year of my Mathematics Degree
+              <h3>University of Durham - BSc Mathematics</h3> <br>
+              Attained 84% in the first year including 93% in Statistics.
             </div>
           </li>
 
@@ -186,7 +186,7 @@
             <div>
               <time>September 2013- August 2015</time> <br>
               <h3>Lancaster Royal Grammar School</h3> <br>
-              Achieved 2 A*&#39s in Maths and Further Maths and 2 A&#39s in Economics and Physics at A-Level
+              Achieved 2 A*&#39s in Maths and Further Maths and 2 A&#39s in Economics and Physics at A-Level.
             </div>
           </li>
 
