--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
     <div class="start">
-      <img src = "root/maths-background.jpg" alt="Pictures of mathmatical symbols" />
+      <img src = "root/mathematics-back.jpeg" alt="Pictures of mathmatical symbols" />
       <div class = "titles">
         <h1>Oscar Lingard</h1>
         <h3>An Online Curriculum Vitae</h3>
@@ -130,7 +130,7 @@
             <div>
               <time>June 2017 - September 2017</time> <br>
               <h3>Internship at Fitch Malta </h3> <br>
-              In this internship, I learnt valuables skills ranging from numerous programming langauges to thought-provoking business ideas. I had to apply both quick learning and communication to succeed in this business workplace.
+              In this internship, I learnt valuables skills ranging from programming langauges to thought-provoking business ideas. I had to apply both quick learning and communication to succeed in this business workplace.
             </div>
           </li>
 
@@ -217,7 +217,7 @@
         <h2>Vice President of The Northern Lights</h2>
         <img src="root/mic.jpg">
         <h4>Award winning A Capella group</h4> <br>
-        <p>I had to overcame the numerous auditions to gain a place in the Durham University a cappella group which won the North Regional A Cappella Championships 2017. After my first year I was elected by my peers to become vice-president for 2017/18.</p>
+        <p>I had to overcome the numerous auditions to gain a place in the Durham University a cappella group which won the North Regional A Cappella Championships 2017. After my first year I was elected by my peers to become vice-president for 2017/18.</p>
       </div>
 
       <div class="cont">
