--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <img src = "root/mathematics-back.jpeg" alt="Pictures of mathmatical symbols" />
       <div class = "titles">
         <h1>Oscar Lingard</h1>
-        <h3>An Online Curriculum Vitae</h3>
+        <h3>Student, Problem Solver and Investor</h3>
       </div>
     </div>
 
@@ -92,10 +92,10 @@
       </div>
 
       <div class="about_me_text">
-        <h4>Bio</h4>
+        <h4>Who am I?</h4>
         <p>
-          Hi! My aim is to secure a financial internship so I can work with highly skilled professionals and continue my learning as well as providing support to the company in the financial department. <br><br>
-          I'm a student originally from Lancashire with strong aspirations for a future in finance. Not only have I gained experience in computer programming languages and understand how stock markets work, I have an inner self-confidence which allows me to communicate with anyone and to any audience.
+           <br><br>
+          I am a student originally from Lancashire with a strong will to succeed in all walks of life. To challenge myself whilst I complete my degree, I have joined the army reserves and have undertaken courses to understand the property market in a greater depth. I have an inner self-confidence which allows me to communicate with anyone and to any audience.
         </p>
 
 
@@ -109,7 +109,7 @@
               <span class="date">Age: 19</span>
             </div>
             <div class="description">
-              Oscar is a maths undergraduate at the University of Durham
+              A maths undergraduate at the University of Durham
             </div>
           </div>
           <div class="extra content">
@@ -209,15 +209,15 @@
       <div class="cont">
         <h2>National Chess Finalist</h2>
         <img src="root/chess.jpg">
-        <h4>Uk Chess Challenge 2013</h4> <br>
-        <p>This showcases my exceptional critical thinking and my ability to see the consequences which arise from my decisions.</p>
+        <h4>Uk Chess Challenge</h4> <br>
+        <p>With this acheivement I thought I would help new chess players by writing my first book designed for beginners to the game. My book can be found <a href="https://www.amazon.co.uk/Chess-Mate-Play-Total-Beginners-ebook/dp/B0777K21JY/ref=sr_1_1?ie=UTF8&qid=1523230027&sr=8-1">here</a>.</p>
       </div>
 
       <div class="cont">
         <h2>Vice President of The Northern Lights</h2>
         <img src="root/mic.jpg">
         <h4>Award winning A Capella group</h4> <br>
-        <p>I had to overcome the numerous auditions to gain a place in the Durham University a cappella group which won the North Regional A Cappella Championships 2017. After my first year I was elected by my peers to become vice-president for 2017/18.</p>
+        <p>I had to overcome the numerous auditions to gain a place in the Durham University a cappella group who placed third in the Natonal A Cappella Championships 2018. After my first year I was elected by my peers to become vice-president for 2017/18.</p>
       </div>
 
       <div class="cont">
