Third Year Edit

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             <img src="root/Prof-Pic.jpg">
           </div>
           <div class="content">
-            <div class="header">Oscar Lingard</div>
+            <div class="header">Oscar J. Lingard</div>
             <div class="meta">
-              <span class="date">Age: 19</span>
+              <span class="date">Age: 20</span>
             </div>
             <div class="description">
               A maths undergraduate at the University of Durham
@@ -125,7 +125,16 @@
       </div>
 
       <section class = "timeline">
+
         <ul>
+          <li>
+            <div>
+              <time>June 2018 - Present</time> <br>
+              <h3>Army Reserve Recruit </h3> <br>
+              Throughout my final year at university I have undertaken training to join the 4 Para Reserve Battallion. The 16 hour days and constant need for concentration in any activity we tackle has strengthened my focus and resolve to succeed. Field exercises where I was leading my fellow recruits has also allowed me what is needed to lead people successfully.
+            </div>
+          </li>
+
           <li>
             <div>
               <time>June 2017 - September 2017</time> <br>
@@ -146,19 +155,19 @@
 
           <li>
             <div>
-              <time>September 2012 - Present</time> <br>
-              <h3>Administrator - Cartford Inn</h3> <br>
-              •	Cooperating with the owner in matters such as administration where I create complex spreadsheets to control the tip system and holiday pay. <br>
-              •	Using my organisational skills to create a more efficient system for documenting the takings of the restaurant.
+              <time>November 2011 - September 2017</time> <br>
+                <h3>Head Waiter and Barista - Cartford Inn</h3> <br>
+                • Because of my quick-thinking and ability to work under pressure, I was promoted to head barista and waiter which involves training other staff members and using my own judgement to assign responsibilities. <br>
+                •	Working in a high-end gastro-pub necessitates that we provide the highest level of food and customer service.
             </div>
           </li>
 
           <li>
             <div>
-              <time>November 2011 - Present</time> <br>
-              <h3>Head Waiter and Barista - Cartford Inn</h3> <br>
-              • Because of my quick-thinking and ability to work under pressure, I was promoted to head barista and waiter which involves training other staff members and using my own judgement to assign responsibilities. <br>
-              •	Working in a high-end gastro-pub necessitates that we provide the highest level of food and customer service.
+              <time>September 2012 - December 2016</time> <br>
+              <h3>Administrator - Cartford Inn</h3> <br>
+              •	Cooperating with the owner in matters such as administration where I create complex spreadsheets to control the tip system and holiday pay. <br>
+              •	Using my organisational skills to create a more efficient system for documenting the takings of the restaurant.
             </div>
           </li>
 
@@ -178,7 +187,7 @@
             <div>
               <time>October 2016 - Present</time> <br>
               <h3>University of Durham - BSc Mathematics</h3> <br>
-              Attained 82% in the first year including 88% in Statistics.
+              Attained 76% in my second year including 88% in Statistics.
             </div>
           </li>
 
@@ -186,7 +195,7 @@
             <div>
               <time>September 2013- August 2015</time> <br>
               <h3>Lancaster Royal Grammar School</h3> <br>
-              Achieved 2 A*&#39s in Maths and Further Maths and 2 A&#39s in Economics and Physics at A-Level.
+              Achieved 2 A*&#39;s in Maths and Further Maths and 2 A&#39;s in Economics and Physics at A-Level.
             </div>
           </li>
 
