--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div>
               <time>June 2017 - September 2017</time> <br>
               <h3>Internship at Fitch Malta </h3> <br>
-              In this internship, I learnt valuables skills ranging from programming langauges to thought-provoking business ideas. I had to apply both quick learning and communication to succeed in this business workplace.
+              In this internship, I learnt valuable skills ranging from programming langauges to thought-provoking business ideas. I had to apply both quick learning and communication to succeed in this business workplace.
             </div>
           </li>
 
