19/6/20 Improval of naming conventions Removal of Package Lock Analyst Update

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
   <body>
-    <nav class = "navBar">
+    <nav class = "navBarVertical">
       <div class="ui vertical menu">
         <a href="#about_me" class="item active" onClick="switchClass(this)">
           About me
@@ -54,22 +54,22 @@
       </div>
     </nav>
 
-    <nav class = "navBar2">
+    <nav class = "navBarFixedRight">
       <div class="ui inverted top fixed menu">
         <div class = "right menu">
-          <a href="#about_me" class="item active" onClick="switchClass2(this)">
+          <a href="#about_me" class="item active" onClick="switchClass(this)">
             About me
           </a>
-          <a href="#experience" class="item" onClick="switchClass2(this)">
+          <a href="#experience" class="item" onClick="switchClass(this)">
             Experiences
           </a>
-          <a href="#education" class="item" onClick="switchClass2(this)">
+          <a href="#education" class="item" onClick="switchClass(this)">
             Education
           </a>
-          <a href="#Achievements" class="item" onClick="switchClass2(this)">
+          <a href="#Achievements" class="item" onClick="switchClass(this)">
             Achievements
           </a>
-          <a href="#contact_me" class="item" onClick="switchClass2(this)">
+          <a href="#contact_me" class="item" onClick="switchClass(this)">
             Contact me
           </a>
         </div>
@@ -82,7 +82,7 @@
       <img src = "root/mathematics-back.jpeg" alt="Pictures of mathmatical symbols" />
       <div class = "titles">
         <h1>Oscar Lingard</h1>
-        <h3>Student, Problem Solver and Investor</h3>
+        <h3>Analyst and Problem Solver</h3>
       </div>
     </div>
 
@@ -95,7 +95,7 @@
         <h4>Who am I?</h4>
         <p>
            <br><br>
-          I am a student originally from Lancashire with a strong will to succeed in all walks of life. To challenge myself whilst I complete my degree, I have joined the army reserves and have undertaken courses to understand the property market in a greater depth. I have an inner self-confidence which allows me to communicate with anyone and to any audience.
+          I am currently an analyst for Booking.com with a strong will to succeed in all walks of life. I enjoy constant challenges which help me push myself and learn from my experiences. I have an inner self-confidence which helps me to communicate with anyone and to any audience.
         </p>
 
 
@@ -106,14 +106,14 @@
           <div class="content">
             <div class="header">Oscar J. Lingard</div>
             <div class="meta">
-              <span class="date">Age: 20</span>
+              <span class="date">Age: 22</span>
             </div>
             <div class="description">
-              A maths undergraduate at the University of Durham
+              A Booking.com analyst and Durham University graduate
             </div>
           </div>
           <div class="extra content">
-            Predicted First Class Honours
+            First Class Honours
           </div>
         </div>
       </div>
@@ -129,15 +129,26 @@
         <ul>
           <li>
             <div>
-              <time>June 2018 - Present</time> <br>
-              <h3>Army Reserve Recruit </h3> <br>
-              Throughout my final year at university I have undertaken training to join the 4 Para Reserve Battallion. The 16 hour days and constant need for concentration in any activity we tackle has strengthened my focus and resolve to succeed. Field exercises where I was leading my fellow recruits has also allowed me what is needed to lead people successfully.
+              <time>2019 - Present</time> <br>
+              <h3>Graduate Commercial Analyst at Booking.com </h3> <br>
+              During my placements I have been involved with multiple branches of the business. Previous highlights include: <br>
+              •	Being actively sought out and asked to be one of the sole analysts in a high-profile marketing campaign. <br>
+              •	Leading the creation of new and innovative forecasting methods in light of the Covid pandemic.<br>
+              •	Presenting my analysis and reccommendations to key stakeholders which have been used to further development in products.
             </div>
           </li>
 
           <li>
             <div>
-              <time>June 2017 - September 2017</time> <br>
+              <time>2018</time> <br>
+              <h3>Army Reserve Recruit </h3> <br>
+              Throughout my final year at university I undertook training to join the 4 Para Reserve Battallion. The 16 hour days and constant need for concentration in any activity we tackle has strengthened my focus and resolve to succeed. Field exercises where I was leading my fellow recruits has also allowed me what is needed to lead people successfully.
+            </div>
+          </li>
+
+          <li>
+            <div>
+              <time>2017</time> <br>
               <h3>Internship at Fitch Malta </h3> <br>
               In this internship, I learnt valuable skills ranging from programming langauges to thought-provoking business ideas. I had to apply both quick learning and communication to succeed in this business workplace.
             </div>
@@ -145,7 +156,7 @@
 
           <li>
             <div>
-              <time>September 2014 - August 2016</time> <br>
+              <time>2014 - 2016</time> <br>
               <h3>Private Tutor</h3> <br>
               •	I used my strong interpersonal skills to clearly and effectively communicate with my tutees. <br>
               •	Constructed clear and precise lesson plans with objectives to work towards. <br>
@@ -155,7 +166,7 @@
 
           <li>
             <div>
-              <time>November 2011 - September 2017</time> <br>
+              <time>2011 - 2017</time> <br>
                 <h3>Head Waiter and Barista - Cartford Inn</h3> <br>
                 • Because of my quick-thinking and ability to work under pressure, I was promoted to head barista and waiter which involves training other staff members and using my own judgement to assign responsibilities. <br>
                 •	Working in a high-end gastro-pub necessitates that we provide the highest level of food and customer service.
@@ -164,7 +175,7 @@
 
           <li>
             <div>
-              <time>September 2012 - December 2016</time> <br>
+              <time>2012 - 2016</time> <br>
               <h3>Administrator - Cartford Inn</h3> <br>
               •	Cooperating with the owner in matters such as administration where I create complex spreadsheets to control the tip system and holiday pay. <br>
               •	Using my organisational skills to create a more efficient system for documenting the takings of the restaurant.
@@ -185,15 +196,15 @@
         <ul>
           <li>
             <div>
-              <time>October 2016 - Present</time> <br>
+              <time>2016 - 2019</time> <br>
               <h3>University of Durham - BSc Mathematics</h3> <br>
-              Attained 76% in my second year including 88% in Statistics.
+              Attained a First Class Honours degree with a contributing dissertation mark of over 80%.
             </div>
           </li>
 
           <li>
             <div>
-              <time>September 2013- August 2015</time> <br>
+              <time>2013 - 2015</time> <br>
               <h3>Lancaster Royal Grammar School</h3> <br>
               Achieved 2 A*&#39;s in Maths and Further Maths and 2 A&#39;s in Economics and Physics at A-Level.
             </div>
@@ -201,7 +212,7 @@
 
           <li>
             <div>
-              <time>September 2008 - August 2013</time> <br>
+              <time>2008 - 2013</time> <br>
               <h3>Lancaster Royal Grammar School</h3> <br>
               Achieved 10 GCSE's A*-A including Maths, Additonal Maths, English and the three sciences.
             </div>
@@ -215,28 +226,28 @@
         <h1>Achievements</h1>
       </div>
 
-      <div class="cont">
+      <div class="achievementContainer">
         <h2>National Chess Finalist</h2>
         <img src="root/chess.jpg">
         <h4>Uk Chess Challenge</h4> <br>
         <p>With this acheivement I thought I would help new chess players by writing my first book designed for beginners to the game. My book can be found <a href="https://www.amazon.co.uk/Chess-Mate-Play-Total-Beginners-ebook/dp/B0777K21JY/ref=sr_1_1?ie=UTF8&qid=1523230027&sr=8-1">here</a>.</p>
       </div>
 
-      <div class="cont">
+      <div class="achievementContainer">
         <h2>Vice President of The Northern Lights</h2>
         <img src="root/mic.jpg">
         <h4>Award winning A Capella group</h4> <br>
         <p>I had to overcome the numerous auditions to gain a place in the Durham University a cappella group who placed third in the Natonal A Cappella Championships 2018. After my first year I was elected by my peers to become vice-president for 2017/18.</p>
       </div>
 
-      <div class="cont">
+      <div class="achievementContainer">
         <h2>Youth Representative</h2>
         <img src="root/masks.png">
         <h4>St Oswalds Dramatists 2013-2015</h4> <br>
         <p> My role was to help any younger members express their concerns and worries to the director. Not only was this a large responsibility I handled from a young age, I utilised my extrovert personality to make it easy for the children to communicate with me.</p>
       </div>
 
-      <div class="cont">
+      <div class="achievementContainer">
         <h2>Charity Work</h2>
         <img src="root/brain.jpg">
         <h4>The Brain Tumour Charity - Mark Lingard Fund</h4> <br>
@@ -250,7 +261,7 @@
       </div>
 
       <div class="ct">
-        <div class="ui labeled big button" onClick="ass1()" >
+        <div class="ui labeled big button" onClick="linkedinAnchorLink()" >
           <div class="ui icon button" data-tooltip="linkedin.com/in/oscarlingard" data-position="top left"  >
             <i class="linkedin icon"></i>
           </div>
@@ -259,7 +270,7 @@
           </div>
         </div>
 
-        <div class="ui labeled big button" id="lab2" onClick="ass2()" >
+        <div class="ui labeled big button" id="emailButton" onClick="emailAnchorLink()" >
           <div class="ui icon button" data-tooltip="oscarlingard@gmail.com" data-position="top left"  >
             <i class="mail icon"></i>
           </div>
