22/06/20 - Update Booking.com description

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <span class="date">Age: 22</span>
             </div>
             <div class="description">
-              A Booking.com analyst and Durham University graduate
+              Booking.com analyst and Durham University graduate
             </div>
           </div>
           <div class="extra content">
@@ -131,10 +131,10 @@
             <div>
               <time>2019 - Present</time> <br>
               <h3>Graduate Commercial Analyst at Booking.com </h3> <br>
-              During my placements I have been involved with multiple branches of the business. Previous highlights include: <br>
+              During my graduate rotations, I have been able to experience multiple branches of the business. Highlights include: <br>
               •	Being actively sought out and asked to be one of the sole analysts in a high-profile marketing campaign. <br>
               •	Leading the creation of new and innovative forecasting methods in light of the Covid pandemic.<br>
-              •	Presenting my analysis and reccommendations to key stakeholders which have been used to further development in products.
+              •	Presenting my analysis and recommendations to key stakeholders which are being used to further product development.
             </div>
           </li>
 
@@ -142,7 +142,7 @@
             <div>
               <time>2018</time> <br>
               <h3>Army Reserve Recruit </h3> <br>
-              Throughout my final year at university I undertook training to join the 4 Para Reserve Battallion. The 16 hour days and constant need for concentration in any activity we tackle has strengthened my focus and resolve to succeed. Field exercises where I was leading my fellow recruits has also allowed me what is needed to lead people successfully.
+              Throughout my final year at university I undertook training to join the 4 Para Reserve Battallion. The 16 hour days and constant need for concentration in any activity we tackled strengthened my focus and resolve to succeed. Field exercises where I led my fellow recruits has shown me what is needed to lead people successfully.
             </div>
           </li>
 
@@ -198,7 +198,7 @@
             <div>
               <time>2016 - 2019</time> <br>
               <h3>University of Durham - BSc Mathematics</h3> <br>
-              Attained a First Class Honours degree with a contributing dissertation mark of over 80%.
+              Attained a First Class Honours degree with a contributing dissertation mark of 80%.
             </div>
           </li>
 
